
Bug Fixes:

CAY-2021 cdbimport: detect when same FK constraint is defined twice
CAY-2077 Bug in CayenneRuntimeException using wrong specified string in Formatter
CAY-2094 SelectById query doesn't work from ROP client
CAY-2161 'Not for Client Use' option is ignored at Class Generation
CAY-2171 Modeler: Undo db Entity Sync throws error
CAY-2230 Error using connection to postgresql with db schema in DB URL
CAY-2240 Modeler: issue with cursor rendering for EJBQL query
CAY-2243 ObjectContext.getGraphManager().unregisterObject() inconsistencies
CAY-2250 Remove: Incorrect text in Confirm Remove message when cursor is set on attribute row
CAY-2256 Cannot Save/Insert an Object With null Flattened (complex) toOne Relationship (see also CAY-2146)
CAY-2265 ServerRuntime.builder() fails to set default runtime name when a the project file doesn't follow recognized pattern
CAY-2273 Modeler: default suggested cgen location is rooted in subpackage
CAY-2275 Documentation: tutorial is out of sync with 4.0.M5 version
CAY-2276 PrePersist listener registered as PostPersist in LifecycleCallbackRegistry.addListener(Class<?>, LifecycleListener)
CAY-2279 cdbimport: skip PK comparison for VIEWs

----------------------------------
Release: 4.0.M5
Date: March 6, 2017
----------------------------------
Changes/New Features:

CAY-2139 Upgrade HSQLDB dependency to the most recent version (2.3.4)
CAY-2150 Refactoring: ParameterBinding to contain ExtendedType property
CAY-2163 Property.path() , ExpressionFactory.pathExp()
CAY-2164 Relocate builder bootstrap methods from ServerRuntimeBuilder to ServerRuntime
CAY-2165 Explicit "contribution" API for easier expansion of DI collections and maps
CAY-2166 Auto-loading of Cayenne modules
CAY-2168 Split DbLoader to parts and clean it up
CAY-2169 Split DbMerger to parts and clean it up
CAY-2170 MergeToken sorting is highly unstable
CAY-2172 Cleanup Modeler import and migrate db actions
CAY-2176 Java 7 diamond class generation templates