@@ -53,6 +53,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -63,7 +73,37 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
 import|;
 end_import
 
@@ -125,6 +165,48 @@ name|Transformer
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|lang
+operator|.
+name|StringUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
 begin_comment
 comment|/**  * A builder class that helps to assemble {@link RowDescriptor} instances from various  * types of inputs.  *   * @since 3.0  */
 end_comment
@@ -134,6 +216,21 @@ specifier|public
 class|class
 name|RowDescriptorBuilder
 block|{
+specifier|private
+specifier|static
+specifier|final
+name|Log
+name|logger
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|RowDescriptorBuilder
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 specifier|private
 specifier|static
 specifier|final
@@ -227,6 +324,10 @@ argument_list|,
 name|String
 argument_list|>
 name|typeOverrides
+decl_stmt|;
+specifier|protected
+name|boolean
+name|validateDuplicateColumnNames
 decl_stmt|;
 comment|/**      * Returns a RowDescriptor built based on the builder internal state.      */
 specifier|public
@@ -437,6 +538,42 @@ index|[
 name|rsLen
 index|]
 decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|duplicates
+init|=
+literal|null
+decl_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|uniqueNames
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|validateDuplicateColumnNames
+condition|)
+block|{
+name|duplicates
+operator|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+expr_stmt|;
+name|uniqueNames
+operator|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+expr_stmt|;
+block|}
 name|int
 name|outputLen
 init|=
@@ -468,11 +605,9 @@ literal|1
 argument_list|)
 decl_stmt|;
 comment|// resolve column descriptor from 'columns' or create new
-name|rsColumns
-index|[
-name|outputLen
-index|]
-operator|=
+name|ColumnDescriptor
+name|descriptor
+init|=
 name|getColumnDescriptor
 argument_list|(
 name|rowkey
@@ -483,9 +618,80 @@ name|i
 operator|+
 literal|1
 argument_list|)
+decl_stmt|;
+comment|// validate uniqueness of names
+if|if
+condition|(
+name|validateDuplicateColumnNames
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|uniqueNames
+operator|.
+name|add
+argument_list|(
+name|descriptor
+operator|.
+name|getDataRowKey
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|duplicates
+operator|.
+name|add
+argument_list|(
+name|descriptor
+operator|.
+name|getDataRowKey
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|rsColumns
+index|[
+name|outputLen
+index|]
+operator|=
+name|descriptor
 expr_stmt|;
 name|outputLen
 operator|++
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|validateDuplicateColumnNames
+operator|&&
+operator|!
+name|duplicates
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|logger
+operator|.
+name|warn
+argument_list|(
+literal|"Found duplicated columns '"
+operator|+
+name|StringUtils
+operator|.
+name|join
+argument_list|(
+name|duplicates
+argument_list|,
+literal|"', '"
+argument_list|)
+operator|+
+literal|"' in row descriptor. "
+operator|+
+literal|"This can lead to errors when converting result to persistent objects."
+argument_list|)
 expr_stmt|;
 block|}
 if|if
@@ -922,6 +1128,22 @@ name|columnName
 argument_list|,
 name|type
 argument_list|)
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+comment|/**      * Validate and report duplicate names of columns.      * @return this builder      */
+specifier|public
+name|RowDescriptorBuilder
+name|validateDuplicateColumnNames
+parameter_list|()
+block|{
+name|this
+operator|.
+name|validateDuplicateColumnNames
+operator|=
+literal|true
 expr_stmt|;
 return|return
 name|this
