@@ -532,9 +532,7 @@ name|i
 argument_list|,
 operator|new
 name|ScalarRowReader
-argument_list|<
-name|Object
-argument_list|>
+argument_list|<>
 argument_list|(
 name|descriptor
 argument_list|,
