@@ -215,6 +215,20 @@ name|cayenne
 operator|.
 name|query
 operator|.
+name|CapsStrategy
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|query
+operator|.
 name|Query
 import|;
 end_import
@@ -320,6 +334,20 @@ operator|.
 name|testmap
 operator|.
 name|Artist
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|unit
+operator|.
+name|UnitDbAdapter
 import|;
 end_import
 
@@ -467,6 +495,12 @@ name|Inject
 specifier|protected
 name|JdbcAdapter
 name|adapter
+decl_stmt|;
+annotation|@
+name|Inject
+specifier|protected
+name|UnitDbAdapter
+name|unitDbAdapter
 decl_stmt|;
 annotation|@
 name|Inject
@@ -861,6 +895,111 @@ literal|"DATE_OF_BIRTH"
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|selectObjects
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|createFourArtists
+argument_list|()
+expr_stmt|;
+name|String
+name|templateString
+init|=
+literal|"SELECT * FROM ARTIST"
+decl_stmt|;
+name|SQLTemplate
+name|sqlTemplate
+init|=
+operator|new
+name|SQLTemplate
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|,
+name|templateString
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|unitDbAdapter
+operator|.
+name|isLowerCaseNames
+argument_list|()
+condition|)
+block|{
+name|sqlTemplate
+operator|.
+name|setColumnNamesCapitalization
+argument_list|(
+name|CapsStrategy
+operator|.
+name|UPPER
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|artists
+init|=
+operator|(
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+operator|)
+name|objectContext
+operator|.
+name|performQuery
+argument_list|(
+name|sqlTemplate
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|4
+argument_list|,
+name|artists
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Artist
+name|artist
+range|:
+name|artists
+control|)
+block|{
+name|assertTrue
+argument_list|(
+name|artist
+operator|.
+name|getArtistName
+argument_list|()
+operator|.
+name|startsWith
+argument_list|(
+literal|"artist"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
